@@ -1,4 +1,16 @@
-Igor Goryachev: original author of mod_presence
+
+	CODE
+	----
+
+Badlop: author of mod_webpresence
+
+Igor Goryachev: author of the original mod_presence
+
+Tobias Markmann: example PHP code
+
+
+       PIXMAPS
+       -------
 
 This module includes pixmap artwork from many different authors.
 The list of known authors in alphabetical order is shown below.
@@ -8,8 +20,7 @@ Everaldo Coelho: crystal
 
 Jason Kim: stellar
 
-NoAlWin:
-jsf-jabber-text, jsf-text and jsf-text2
+NoAlWin: jsf-jabber-text, jsf-text and jsf-text2
 
 Unknown author: 
 alphamod
